// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Button control Disable 1`] = `
<div
  class="control disabled"
>
  <main
    class="control__body"
    id="id"
  >
    <p
      class="control__name"
      title="Button"
    >
      Button
    </p>
    <div
      class="control__content"
    >
      
    
      <label
        class="checkbox"
        for="checkboxId"
      >
        
      
        <input
          disabled="true"
          id="checkboxId"
          title="Button"
          type="checkbox"
        />
        
    
      </label>
      
  
    </div>
  </main>
</div>
`;

exports[`Button control Enable 1`] = `
<div
  class="control"
>
  <main
    class="control__body"
    id="id"
  >
    <p
      class="control__name"
      title="Button"
    >
      Button
    </p>
    <div
      class="control__content"
    >
      
    
      <label
        class="checkbox"
        for="checkboxId"
      >
        
      
        <input
          id="checkboxId"
          title="Button"
          type="checkbox"
        />
        
    
      </label>
      
  
    </div>
  </main>
</div>
`;

exports[`Button control If it matches the snapshot 1`] = `
<div
  class="control"
>
  <main
    class="control__body"
    id="id"
  >
    <p
      class="control__name"
      title="Button"
    >
      Button
    </p>
    <div
      class="control__content"
    >
      
    
      <label
        class="checkbox"
        for="checkboxId"
      >
        
      
        <input
          id="checkboxId"
          title="Button"
          type="checkbox"
        />
        
    
      </label>
      
  
    </div>
  </main>
</div>
`;
